--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.scss
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.scss
@@ -13,3 +13,8 @@ div.card-body{
 input{
   font-size: 1.1rem;
 }
+.alert-danger {
+  color: rgb(255, 108, 92);
+  background-color: rgba(255, 108, 92, .15);
+}
+
