--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -105,7 +105,7 @@
 
       <!--      Spatial subsetting-->
       <div class="p-col-12">
-        <qa-spatial-subset [subsetModel]="validationModel.spatialSubsetModel" [spatialSubsettingLimited]="spatialSubsettingLimited"></qa-spatial-subset>
+        <qa-spatial-subset [subsetModel]="validationModel.spatialSubsetModel"></qa-spatial-subset>
       </div>
 
 
