--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -97,7 +97,7 @@
         <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" collapsed="true">
           <qa-map class="map" #qwerty
                   [spatialSubset]="validationModel.spatialSubsetModel"
-                  [center]="[-37.1,37.6]"
+                  [center]="[10, 52.5]"
                   [zoom]="2.5"></qa-map>
         </p-panel>
 
