checking for an existing validation added along with opening a modal window

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -157,5 +157,7 @@
 
     </div>
   </div>
+  <qa-existing-validation *ngIf="isExistingValidationWindowOpen"></qa-existing-validation>
 </div>
 <qa-scroll-to-top></qa-scroll-to-top>
+
