--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -40,17 +40,10 @@
 
               <ng-container *ngFor="let filter of item.basicFilters; let filterIdx = index">
                 <qa-basic-filter
-                  *ngIf="isIncluded(filter.filterDto.id, item.basicFilters); else isNot"
-                  class = "ml-1"
+                  [ngClass]="isIncluded(filter.filterDto.id, item.basicFilters) == true ? 'ml-1' : ''"
                   [filterModel]="filter"
                   (onIncludeMutual)="includeFilter($event, item.basicFilters, filter.enabled)">
                 </qa-basic-filter>
-                <ng-template #isNot>
-                  <qa-basic-filter
-                    [filterModel]="filter"
-                    (onIncludeMutual)="includeFilter($event, item.basicFilters, filter.enabled)">
-                  </qa-basic-filter>
-                </ng-template>
               </ng-container>
               <div style="width: 100%;text-align: right">
                 <button pButton type="button"
@@ -96,9 +89,13 @@
               [selectionModel]="validationModel.referenceConfigurations[0].datasetModel"
               (changeDataset)="onReferenceChange()"></qa-dataset>
 
-            <qa-basic-filter
-              *ngFor="let filter of validationModel.referenceConfigurations[0].basicFilters; let i = index"
-              [filterModel]="filter"></qa-basic-filter>
+            <ng-container *ngFor="let filter of validationModel.referenceConfigurations[0].basicFilters; let i = index">
+              <qa-basic-filter
+                [ngClass]="isIncluded(filter.filterDto.id, validationModel.referenceConfigurations[0].basicFilters) == true ? 'ml-1' : ''"
+                [filterModel]="filter"
+                (onIncludeMutual)="includeFilter($event, validationModel.referenceConfigurations[0].basicFilters, filter.enabled)">
+              </qa-basic-filter>
+            </ng-container>
           </div>
 
         </p-panel>
