--- a/UI/src/app/pages/validate/validate.component.scss
+++ b/UI/src/app/pages/validate/validate.component.scss
@@ -17,6 +17,11 @@
   align-items: center;
   min-width: 5rem;
 }
+.non-scrollable{
+  position: fixed;
+  overflow-y: hidden;
+}
+
 
 .help-field{
   color: white;
