--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -122,7 +122,7 @@
             type="button"
             icon="pi pi-plus"
             class="btn-action"
-            title="Track this validation"
+            title="Pin this validation"
             (click)="addValidation(validationRun.id)"
             onclick="">
     </button>
@@ -238,10 +238,10 @@
     <div style="float: right;">
       <button *ngIf="isLogged && validationRun.is_unpublished" pButton
               type="button"
-              icon="pi pi-times"
+              icon="pi pi-copy"
               class="btn-action-large"
               title="If you copy this validation, it will be added to the list of your validations and you will have a full controll over it."
-              label="Copy"
+              label="Copy validation"
               (click)="copy(validationRun.id)">
       </button>
 
@@ -256,23 +256,23 @@
          title="Load settings">
       </a>
 
-      <button *ngIf="isLogged && isTrackedByTheUser"
+      <button *ngIf="isLogged && isTrackedByTheUser && !validationRun.is_unpublished"
               pButton
               type="button"
               icon="pi pi-times"
               class="btn-action-large"
-              label="Untrack"
+              label="Unpin"
               title="Remove this validation from your list"
               (click)="removeValidation(validationRun.id)">
       </button>
 
-      <button *ngIf="isLogged && !isTrackedByTheUser"
+      <button *ngIf="isLogged && !isTrackedByTheUser && !validationRun.is_unpublished"
               class="btn-action-large"
               pButton
               type="button"
               icon="pi pi-plus"
-              label="Track"
-              title="Tracking results gives a quick access to it, however, if the results is removed by the owner, you will loose access to it."
+              label="Pin"
+              title="Pinning results gives a quick access to it, however, if the results is removed by the owner, you will loose access to it."
               (click)="addValidation(validationRun.id)">
       </button>
 
