button title updated

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -240,7 +240,7 @@
               type="button"
               icon="pi pi-copy"
               class="btn-action-large"
-              title="If you copy this validation, it will be added to the list of your validations and you will have a full controll over it."
+              title="If you copy this validation, it will be added to the list of your validations with all the result files. You will have a full control over the copy."
               label="Copy validation"
               (click)="copy(validationRun.id)">
       </button>
